@@ -2,6 +2,7 @@
 
  - Fixed
    - O_CLOEXEC undeclared error when compiling with glibc older than 2.12
+   - Image output --headertext wasn't being applied to some output types
  - New
    - Detection of 32-bit / 64-bit kernel interface counters for improving
      traffic calculations in rollover situations, cfg: 64bitInterfaceCounters
